--- a/app/src/main/res/layout/activity_politics.xml
+++ b/app/src/main/res/layout/activity_politics.xml
@@ -200,6 +200,40 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView310" />
 
             <TextView
+                android:id="@+id/textView3404"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:text="Encontrou algum produto impróprio neste App?"
+                android:textColor="#070707"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView362" />
+
+            <TextView
+                android:id="@+id/textView3747"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="16dp"
+                android:text="Entre em contato conosco agora mesmo através do e-mail: txe.dev@gmail.com"
+                android:textColor="#3A3A3A"
+                android:textSize="13dp"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView304" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+            <TextView
                 android:id="@+id/textView304"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -221,7 +255,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="16dp"
-                android:text="Se você quiser entrar em contato conosco para saber mais sobre esta Política de Privacidade, ou quiser acessar quaisquer informações relativas aos seus direitos individuais e às suas Informações Pessoais, você poderá enviar um e-mail para o endereço txe.dev@gmail.com."
+                android:text="Se você quiser entrar em contato conosco para saber mais sobre esta Política de Privacidade, ou quiser acessar quaisquer informações relativas aos seus direitos individuais, às suas Informações Pessoais ou denunciar algum produto ilegal ou indevido, você poderá enviar um e-mail para o endereço txe.dev@gmail.com."
                 android:textColor="#3A3A3A"
                 android:textSize="13dp"
                 android:textStyle="italic"
